--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
-    "firebase": "^9.8.3",
+    "firebase": "^9.8.4",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
@@ -41,5 +41,21 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MadaraCK/portfoliolab.git"
+  },
+  "keywords": [
+    "123"
+  ],
+  "author": "Mikołaj",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/MadaraCK/portfoliolab/issues"
+  },
+  "homepage": "",
+  "devDependencies": {}
 }
